--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="1lab.cpp" />
+    <ClCompile Include="FileName.cpp" />
     <ClCompile Include="lab2.cpp" />
     <ClCompile Include="lab3.cpp" />
     <ClCompile Include="lab4.cpp" />
